BAC-53 feat(product): 병합 오류 해결